src/objects/LG_ProcessRequest__c.object
<CustomObject>
    <fields>
        <fullName>LG_PortingAgreedDate__c</fullName>
        <label>Port-in Agreed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LG_Process__c</fullName>
        <label>Process</label>
        <referenceTo>LG_PortingProcess__c</referenceTo>
        <relationshipLabel>Process Requests</relationshipLabel>
        <relationshipName>Process_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LG_RequestId__c</fullName>
        <externalId>true</externalId>
        <label>Request Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Response__c</fullName>
        <label>Response</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LG_ProcessResponseStatus</valueSetName>
        </valueSet>
    </fields>
    <label>Process Request</label>
    <nameField>
        <displayFormat>PR-{00000}</displayFormat>
        <label>Process Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Process Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>